# ZeroTrustBounty

./: README.md
bug-bounty-platform/: .gitignore  README.md  package-lock.json  package.json  prisma.config.ts
bug-bounty-platform/app/: layout.tsx  page.tsx
bug-bounty-platform/app/(auth)/login/: page.tsx
bug-bounty-platform/app/(auth)/register/: page.tsx
bug-bounty-platform/app/api/leaderboard/: route.ts
bug-bounty-platform/app/api/programs/: route.ts
bug-bounty-platform/app/dashboard/: page.tsx
bug-bounty-platform/app/leaderboard/: page.tsx
bug-bounty-platform/app/programs/: page.tsx
bug-bounty-platform/components/: Navbar.tsx  PayReportButton.tsx  SeverityBadge.tsx  StatusBadge.tsx  TlsProofBadge.tsx  TlsProofRevealUploader.tsx  TlsProofUploader.tsx  TlsProofViewer.tsx
bug-bounty-platform/lib/: auth.ts  payments.ts  prisma.ts  tlsProof.ts  tlsProofApi.ts  tlsProofClipboard.ts  tlsProofRedaction.ts  types.ts
bug-bounty-platform/prisma/: schema.prisma  seed.ts
burpsuite-tlsnotary-extension/: .gitignore  README.md  build.gradle  settings.gradle
burpsuite-tlsnotary-extension/bridge/: requirements.txt  tlsnotary_bridge.py
burpsuite-tlsnotary-extension/scripts/: build_extension.sh  setup_gradle_wrapper.sh  start_bridge.sh
encrypt_and_decrypt_file/: package-lock.json  package.json
encrypt_and_decrypt_file/src/: App.css  App.js  lit.js
tlsn-docker/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
tlsn-docker/src/: lib.rs
tlsn/examples/: proof.json  simple_prover.rs  test.json
(+30 files in other folders)
