[package]
name = "tlsn-docker-tools"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json", "macros"] }
base64 = "0.22"
bincode = "1.3"
chrono = { version = "0.4", default-features = true }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["fs", "macros", "net", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tlsn = { git = "https://github.com/tlsnotary/tlsn", tag = "v0.1.0-alpha.14", package = "tlsn" }

[[bin]]
name = "tlsn-notary-server"
path = "src/bin/notary_server.rs"

[[bin]]
name = "tlsn-prove"
path = "src/bin/prove.rs"

[[bin]]
name = "tlsn-verify"
path = "src/bin/verify.rs"

[[bin]]
name = "tlsn-api"
path = "src/bin/api.rs"
